--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,72 +1,73 @@
-application.splash=
-application.title=SSW
+#Sat Jul 06 16:11:07 EDT 2019
+run.classpath=${javac.classpath}\:${build.classes.dir}
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
+excludes=
+javac.processorpath=${javac.classpath}
+dist.javadoc.dir=${dist.dir}/javadoc
+test.src.dir=test
+jnlp.offline-allowed=false
+run.modulepath=${javac.modulepath}
+annotation.processing.enabled=true
+jnlp.codebase.type=local
+build.sysclasspath=ignore
+debug.modulepath=${run.modulepath}
+javac.compilerargs=
+javadoc.noindex=false
+javadoc.private=false
+javadoc.author=false
+endorsed.classpath=
+jnlp.codebase.url=file\:/home/justin/devel/SSW/dist
+main.class=ssw.Main
+junit.selected.version=3
+source.encoding=UTF-8
+javac.source=1.6
+includes=**
+javadoc.use=true
+jar.compress=false
+javadoc.nonavbar=false
+annotation.processing.enabled.in.editor=false
+javadoc.notree=false
+annotation.processing.processors.list=
+javac.deprecation=false
 application.vendor=justin
-build.classes.dir=${build.dir}/classes
+jlink.launcher=false
+javadoc.additionalparam=
+reference.SSWlib.jar=${project.SSWlib}/dist/SSWlib.jar
+jnlp.signed=false
+jlink.launcher.name=SSW
+build.generated.sources.dir=${build.dir}/generated-sources
+javadoc.splitindex=true
+javac.processormodulepath=
+run.jvmargs=
+javadoc.encoding=${source.encoding}
+javac.classpath=${libs.absolutelayout.classpath}\:${reference.SSWlib.jar}
+mkdist.disabled=false
+run.test.modulepath=${javac.test.modulepath}
 build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
+dist.jar=${dist.dir}/SSW.jar
+build.classes.dir=${build.dir}/classes
+debug.test.modulepath=${run.test.modulepath}
+build.test.classes.dir=${build.dir}/test/classes
+javadoc.windowtitle=
+build.test.results.dir=${build.dir}/test/results
+application.splash=
+jnlp.enabled=false
+dist.dir=dist
 build.dir=build
 build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-debug.classpath=\
-    ${run.classpath}
-debug.test.classpath=\
-    ${run.test.classpath}
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/SSW.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-excludes=
-includes=**
-jar.compress=false
-javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
-    ${reference.SSWlib.jar}
-# Space-separated list of extra javac options
-javac.compilerargs=
-javac.deprecation=false
-javac.source=1.5
-javac.target=1.5
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
-javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
 javadoc.version=false
-javadoc.windowtitle=
-jnlp.codebase.type=local
-jnlp.codebase.url=file:/home/justin/devel/SSW/dist
-jnlp.enabled=false
-jnlp.offline-allowed=false
-jnlp.signed=false
-main.class=ssw.Main
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-platform.active=default_platform
+application.title=SSW
+javac.test.modulepath=${javac.modulepath}
 project.SSWlib=../SSWLib
-reference.SSWlib.jar=${project.SSWlib}/dist/SSWlib.jar
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project
-# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
-# or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-source.encoding=UTF-8
+debug.test.classpath=${run.test.classpath}
+javac.external.vm=false
+javac.target=1.6
+platform.active=default_platform
+manifest.file=manifest.mf
+javadoc.html5=false
+meta.inf.dir=${src.dir}/META-INF
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+annotation.processing.run.all.processors=true
+javac.modulepath=
 src.dir=src
-test.src.dir=test
+debug.classpath=${run.classpath}
